--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "mari-bot-store",
+  "name": "mari-gaming-store-bot",
   "version": "1.0.0",
-  "description": "Bot MaRi Gaming Store",
+  "description": "Bot Joki Elit MaRi Store",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "whatsapp-web.js": "^1.23.0",
     "qrcode-terminal": "^0.12.0",
-    "puppeteer": "^21.0.0"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "puppeteer": "^21.11.0"
   }
 }
