--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mari-gaming-store-bot",
+  "name": "mari-bot-admin",
   "version": "1.0.0",
-  "description": "Bot Joki Elit MaRi Store",
+  "description": "Bot Admin Joki Elit MaRi Store",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -12,6 +12,6 @@
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "puppeteer": "^21.11.0"
+    "puppeteer": "^21.0.0"
   }
 }
